first pass at data source searches